# clock

./: .gitignore  CMakeLists.txt  README.md  clock.cpp  clock.h  clock.pro  main.cpp
src/: CMakeLists.txt  clock.cpp  clock.h  clock.ui  main.cpp
